[tool.poetry]
name = "cryptoco-py"
version = "0.1.1"
description = "A package to query cryptocurrency information"
authors = ["Jawad Abduljawad(TerminalJ) <jawadhamdiabduljawad@gmail.com>"]
readme = 'README.md'
license = 'MIT'

[tool.poetry.scripts]
cryptoco-py = "cryptoco_py.__main__:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.0"}
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
